# jurba-media-django

./: .gitignore  docker-compose.yml
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/app/: serializers.py  settings.py  urls.py  views.py
backend/article/: admin.py  models.py  populate.py  serializers.py  tests.py  views.py
backend/article/migrations/: 0001_initial.py  0002_article_author.py  0003_alter_article_promo_image.py  0004_alter_article_promo_image.py  0005_alter_article_image_alter_article_promo_image_and_more.py  0006_tag_article_tags.py
frontend/: Dockerfile  package-lock.json
frontend/public/: index.html
frontend/src/: App.js  ArticleCard.js  Home.js  Layout.js
